[2/2] Smart Speaker: Dialer settings for smart speaker
Change-Id: I66d121ccf29e9e60361b13fa2b6e6bc014c41b35

--- a/res/xml/general_settings.xml
+++ b/res/xml/general_settings.xml
@@ -98,9 +98,9 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="dialer_general_smart_settings_category_key"
-        android:title="@string/smart_settings_title"
-        android:persistent="false" >
+        android:key="dialer_general_smart_category_key"
+        android:title="@string/smart_options_title"
+        android:persistent="false">
 
         <SwitchPreference
             android:key="button_smart_dialer"
@@ -109,17 +109,17 @@
             android:defaultValue="false" />
 
         <SwitchPreference
-            android:key="smart_speaker"
-            android:title="@string/smart_speaker_title"
+            android:key="button_smart_speaker"
             android:summary="@string/smart_speaker_summary"
+            android:title="@string/smart_speaker_title"
             android:defaultValue="false" />
 
         <SwitchPreference
-            android:key="smart_speaker_incall_only"
-            android:dependency="smart_speaker"
-            android:title="@string/smart_speaker_incall_only_title"
+            android:dependency="button_smart_speaker"
+            android:key="button_smart_speaker_incall_only"
             android:summaryOn="@string/smart_speaker_incall_only_summary_on"
             android:summaryOff="@string/smart_speaker_incall_only_summary_off"
+            android:title="@string/smart_speaker_incall_only_title"
             android:defaultValue="false" />
 
     </PreferenceCategory>
