Fix up call log search UX.
Change-Id: I0dc9556af8ae7328236a0efab0c96cdabc9938fc

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -99,6 +99,12 @@
         <item name="android:actionOverflowButtonStyle">@style/DialtactsActionBarOverflowWhite</item>
     </style>
 
+    <style name="DialtactsThemeWithoutActionBar" parent="DialtactsThemeWithoutActionBarOverlay">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:toolbarStyle">@style/ToolbarStyle</item>
+    </style>
+
     <!-- Hide the actionbar title during the activity preview -->
     <style name="DialtactsActivityTheme" parent="DialtactsTheme">
         <item name="android:actionBarStyle">@style/DialtactsActionBarWithoutTitleStyle</item>
@@ -108,6 +114,11 @@
     <!-- A theme for inflation of spinners in the dialtacts action bar -->
     <style name="DialtactsSpinnerTheme" parent="DialtactsTheme">
         <item name="android:textAppearanceListItemSmall">@android:style/TextAppearance.Holo.Medium.Inverse</item>
+    </style>
+
+    <!-- A theme for inflation of a search view dialtacts action bar -->
+    <style name="DialtactsSearchTheme" parent="@android:style/ThemeOverlay.Material.Dark.ActionBar">
+        <item name="android:colorControlActivated">@color/actionbar_icon_color</item>
     </style>
 
     <style name="DialtactsActionBarSpinner"
@@ -169,6 +180,10 @@
         <item name="android:textColor">@color/tab_text_color</item>
         <item name="android:textSize">@dimen/tab_text_size</item>
         <item name="android:fontFamily">"sans-serif-medium"</item>
+    </style>
+
+    <style name="ToolbarStyle" parent="@android:style/Widget.Toolbar">
+        <item name="android:titleTextAppearance">@style/DialtactsActionBarTitleText</item>
     </style>
 
     <style name="ListViewStyle" parent="@android:style/Widget.Material.Light.ListView">
